--- a/자료구조(data structure)/14. 그래프(Graph).md
+++ b/자료구조(data structure)/14. 그래프(Graph).md
@@ -17,6 +17,297 @@
 
 ### 그래프의 집합 표현
 그래프 G의 정점 집합 - V(G)로 표시
+
 그래프 G의 간선 집합 - E(G)로 표시
 
-![](https://ibb.co/X4x2ps6)
+### 그래프를 구현하는 두 가지 방법
+- 인접 행렬(adjacent matrix) 기반 그래프 - 정방 행렬을 활용(정방 행렬: 가로세로의 길이가 같은 행렬 - 2차원 배열)
+- 인접 리스트(adjacent list) 기반 그래프 - 연결 리스트를 활용
+
+## 인접 리스트 기반의 그래프 구현
+<details>
+<summary>그래프 코드(출처: 윤성우의 열혈 자료구조)</summary>
+
+- 연결 리스트는 앞선 챕터에서 구현한 코드 사용
+<details>
+<summary>ALGraph.c</summary>
+
+```C
+#include <stdio.h>
+#include "ALGraph.h"
+
+int WhoIsPrecede(int data1, int data2);
+// 그래프의 초기화
+void GraphInit(ALGraph* pg, int nv) {
+	int i;
+
+	pg->adjList = (List*)malloc(sizeof(List) * nv);
+
+	pg->numV = nv;
+	pg->numE = 0;
+
+	for (i = 0; i < nv; i++) {
+		ListInit(&(pg->adjList[i]));
+		SetSortRule(&(pg->adjList[i]), WhoIsPrecede);
+	}
+}
+
+// 그래프의 리소스 해제
+void GraphDestroy(ALGraph* pg) {
+	if (pg->adjList != NULL)
+		free(pg->adjList);
+}
+
+// 간선의 추가
+void AddEdge(ALGraph* pg, int fromV, int toV) {
+	LInsert(&(pg->adjList[fromV]), toV);
+	LInsert(&(pg->adjList[toV]), fromV);
+
+	pg->numE++;
+}
+
+// 간선의 정보 출력
+void ShowGraphEdgeInfo(ALGraph* pg) {
+	int i; 
+	int vx;
+
+	for (i = 0; i < pg->numV; i++) {
+		printf("%c와 연결된 정점: ", i + 65);
+
+		if (LFirst(&(pg->adjList[i]), &vx)) {
+			printf("%c ", vx + 65);
+			while (LNext(&(pg->adjList[i]), &vx))
+				printf("%c ", vx + 65);
+		}
+		printf("\n");
+	}
+}
+// 정렬 기준 알파벳 순으로
+int WhoIsPrecede(int data1, int data2) {
+	if (data1 < data2)
+		return 0;
+	else
+		return 1;
+}
+```
+</details>
+<details>
+<summary>ALGraph.h</summary>
+
+```C
+#ifndef __GRAPH_H__
+#define __GRAPH_H__
+
+#include "DLinkedList.h"
+
+enum {A, B, C, D, E, F, G, H, I, J};
+
+typedef struct _ual {
+	int numV;
+	int numE;
+	List* adjList;
+} ALGraph;
+
+// 그래프의 초기화
+void GraphInit(ALGraph* pg, int nv);
+
+// 그래프의 리소스 해제
+void GraphDestroy(ALGraph* pg);
+
+// 간선의 추가
+void AddEdge(ALGraph* pg, int fromV, int toV);
+
+// 간선의 정보 출력
+void ShowGraphEdgeInfo(ALGraph* pg);
+
+#endif
+
+```
+</details>
+</details>
+
+## 그래프의 탐색
+그래프의 탐색 -> 모든 정점에 한번씩 접근하기 -> 모든 정점을 돌아다니는 방법.
+### 깊이 우선 탐색(Depth First Search: DFS)
+> 비상연락망 예시에서 정점 = 학생, 간선 = 비상연락망
+- 한 사람에게만 연락을 한다.
+- 연락할 사람이 없으면, 자신에게 연락한 사람에게 이를 알린다.
+- 처음 연락을 시작한 사람의 위치에서 연락은 끝이 난다.
+
+### 너비 우선 탐색(Breadth First Search: BFS)
+DFS는 한 사람에게 연락을 취하는 방식이면, BFS는 자신에게 연결된 모든 사람에게 연락을 취하는 방식
+- 연결된 모든 사람에게 연락을 한다.
+> BFS -> 소문, DFS -> 비밀이 퍼지는 방식
+
+### 깊이 우선 탐색의 구현 모델
+- 스택 - 경로 정보의 추적을 목적
+    - 갔던 길을 되돌아 오는 상황에 사용
+    - 한 사람이 연락권을 다른 사람에게 넘길 때 그 사람의 정보를 스택으로 옮긴다.
+    - 정점을 떠날 때 떠나는 정점의 정보를 스택에 쌓아야 함.
+- 배열 - 방문 정보의 기록을 목적
+
+<details>
+<summary>DFS 코드(출처: 윤성우의 열혈 자료구조)</summary>
+
+- 연결 리스트 및 스택은 앞선 챕터에서 구현한 함수 사용
+- 위 그래프 코드에서 함수 추가 및 변경
+<details>
+<summary>AVLGraphDFS.c</summary>
+
+```C
+#include <stdio.h>
+#include <stdlib.h>
+#include <string.h>
+#include "ALGraphDFS.h"
+#include "DLinkedList.h"
+#include "ArrayBaseStack.h"
+
+int WhoIsPrecede(int data1, int data2);
+
+// 그래프의 초기화
+void GraphInit(ALGraph* pg, int nv) {
+	int i;
+
+	// 정점 수에 해당하는 길이의 리스트 배열을 생성
+	pg->adjList = (List*)malloc(sizeof(List) * nv);	// 간선정보를 저장할 리스트 생성
+
+	pg->numV = nv;	// 정점의 수는 nv에 저장된 값으로 설정
+	pg->numE = 0;	// 초기의 간선 수는 0개
+
+	// 정점의 수만큼 생성된 리스트 초기화
+	for (i = 0; i < nv; i++) {
+		ListInit(&(pg->adjList[i]));
+		SetSortRule(&(pg->adjList[i]), WhoIsPrecede);	// 리스트의 정렬기준 설정
+	}
+	// 정점의 수를 길이로 하여 배열을 할당
+	pg->visitInfo = (int*)malloc(sizeof(int) * pg->numV);
+	// 배열의 모든 요소를 0으로 초기화
+	memset(pg->visitInfo, 0, sizeof(int) * pg->numV);
+}
+
+// 그래프의 리소스 해제
+void GraphDestroy(ALGraph* pg) {
+	if (pg->adjList != NULL)
+		free(pg->adjList);	// 동적 할당된 연결 리스트 소멸
+	if (pg->visitInfo != NULL)
+		free(pg->visitInfo);	// 할당된 배열 소멸
+}
+
+// 간선의 추가(무방향 그래프)
+void AddEdge(ALGraph* pg, int fromV, int toV) {
+	LInsert(&(pg->adjList[fromV]), toV);
+	// 방향 그래프면 LInsert 하나만 사용
+	LInsert(&(pg->adjList[toV]), fromV);
+	pg->numE++;
+}
+
+// 간선의 정보 출력
+void ShowGraphEdgeInfo(ALGraph* pg) {
+	int i; 
+	int vx;
+
+	for (i = 0; i < pg->numV; i++) {
+		printf("%c와 연결된 정점: ", i + 65);
+
+		if (LFirst(&(pg->adjList[i]), &vx)) {
+			printf("%c ", vx + 65);
+			while (LNext(&(pg->adjList[i]), &vx))
+				printf("%c ", vx + 65);
+		}
+		printf("\n");
+	}
+}
+// 정렬 기준 알파벳 순으로
+int WhoIsPrecede(int data1, int data2) {
+	if (data1 < data2)
+		return 0;
+	else
+		return 1;
+}
+// 방문한 정점의 정보를 기록 및 출력
+int VisitVertex(ALGraph* pg, int visitV) {
+	if (pg->visitInfo[visitV] == 0) {	// 처음 방문일 때
+		pg->visitInfo[visitV] = 1;	// 방문으로 기록
+		printf("%c ", visitV + 65);
+		return TRUE;
+	}
+	return FALSE;
+}
+void DFSShowGraphVertex(ALGraph* pg, int startV) {
+	// 초기화 영역
+	Stack stack;
+	int visitV = startV;
+	int nextV;
+	StackInit(&stack);
+	VisitVertex(pg, visitV);
+	SPush(&stack, visitV);
+
+	while (LFirst(&(pg->adjList[visitV]), &nextV) == TRUE) {
+		int visitFlag = FALSE;
+		if (VisitVertex(pg, nextV) == TRUE) {	// 방문 성공
+			SPush(&stack, visitV);
+			visitV = nextV;
+			visitFlag = TRUE;
+		}
+		else {	// 이미 방문한 곳
+			while (LNext(&(pg->adjList[visitV]), &nextV) == TRUE) {
+				if (VisitVertex(pg, nextV) == TRUE) {
+					SPush(&stack, visitV);
+					visitV = nextV;
+					visitFlag = TRUE;
+					break;
+				}
+			}
+		}
+		// 현재 정점과 연결된 모든 정점을 방문했다면
+		if (visitFlag == FALSE) {
+			if (SIsEmpty(&stack) == TRUE)
+				break;
+			else
+				visitV = SPop(&stack);
+		}
+	}
+	memset(pg->visitInfo, 0, sizeof(int) * pg->numV);
+}
+```
+</details>
+<details>
+<summary>AVLGraphDFS.h</summary>
+
+```C
+#ifndef __AL_GRAPH_DFS_H__
+#define __AL_GRAPH_DFS_H__
+
+#include "DLinkedList.h"
+
+enum {A, B, C, D, E, F, G, H, I, J};
+
+typedef struct _ual {
+	int numV;
+	int numE;
+	List* adjList;
+	int* visitInfo;
+} ALGraph;
+
+// 그래프의 초기화
+void GraphInit(ALGraph* pg, int nv);
+
+// 그래프의 리소스 해제
+void GraphDestroy(ALGraph* pg);
+
+// 간선의 추가
+void AddEdge(ALGraph* pg, int fromV, int toV);
+
+// 간선의 정보 출력
+void ShowGraphEdgeInfo(ALGraph* pg);
+
+// DFS를 통해 그래프의 모든 정점 정보 출력
+void DFSShowGraphVertex(ALGraph* pg, int startV);
+
+#endif
+
+```
+</details>
+</details>
+
+### 너비 우선 탐색의 구현 모델
