최소 비용 신장 트리 추가

--- a/자료구조(data structure)/14. 그래프(Graph).md
+++ b/자료구조(data structure)/14. 그래프(Graph).md
@@ -311,3 +311,206 @@ void DFSShowGraphVertex(ALGraph* pg, int startV);
 </details>
 
 ### 너비 우선 탐색의 구현 모델
+- 큐 - 책 보고 내용 추가.----
+
+<details>
+<summary>BFS 코드(출처: 윤성우의 열혈 자료구조)</summary>
+
+- 연결 리스트 및 큐는 앞선 챕터에서 구현한 함수 사용
+- BFS는 위 그래프 코드에서 함수 추가 및 변경
+<details>
+<summary>AVLGraphBFS.c</summary>
+
+```C
+#include <stdio.h>
+#include <stdlib.h>
+#include <string.h>
+#include "ALGraphBFS.h"
+#include "DLinkedList.h"
+#include "CircularQueue.h"
+
+int WhoIsPrecede(int data1, int data2);
+
+// 그래프의 초기화
+void GraphInit(ALGraph * pg, int nv)
+{
+	int i;
+
+	pg->adjList = (List*)malloc(sizeof(List)*nv);
+	pg->numV = nv;
+	pg->numE = 0;     // 초기의 간선 수는 0개
+
+	for(i=0; i<nv; i++)
+	{
+		ListInit(&(pg->adjList[i]));
+		SetSortRule(&(pg->adjList[i]), WhoIsPrecede); 
+	}
+
+	// 탐색 정보 등록을 위한 공간의 할당 및 초기화
+	pg->visitInfo= (int *)malloc(sizeof(int) * pg->numV);
+	memset(pg->visitInfo, 0, sizeof(int) * pg->numV);
+}
+
+// 그래프의 리소스 해제
+void GraphDestroy(ALGraph * pg)
+{
+	if(pg->adjList != NULL)
+		free(pg->adjList);
+
+	if(pg->visitInfo != NULL)
+		free(pg->visitInfo);
+}
+
+// 간선의 추가
+void AddEdge(ALGraph * pg, int fromV, int toV)
+{
+	LInsert(&(pg->adjList[fromV]), toV);
+	LInsert(&(pg->adjList[toV]), fromV);
+	pg->numE += 1;
+}
+
+// 유틸리티 함수: 간선의 정보 출력
+void ShowGraphEdgeInfo(ALGraph * pg)
+{
+	int i;
+	int vx;
+
+	for(i=0; i<pg->numV; i++)
+	{
+		printf("%c와 연결된 정점: ", i + 65);
+		
+		if(LFirst(&(pg->adjList[i]), &vx))
+		{
+			printf("%c ", vx + 65);
+			
+			while(LNext(&(pg->adjList[i]), &vx))
+				printf("%c ", vx + 65);
+		}
+		printf("\n");
+	}
+}
+
+int WhoIsPrecede(int data1, int data2)
+{
+	if(data1 < data2)
+		return 0;
+	else
+		return 1;
+}
+
+
+int VisitVertex(ALGraph * pg, int visitV)
+{
+	if(pg->visitInfo[visitV] == 0)
+	{
+		pg->visitInfo[visitV] = 1;
+		printf("%c ", visitV + 65);    // 방문 정점 출력
+		return TRUE;
+	}
+	
+	return FALSE;
+}
+
+// Breadth First Search: 정점의 정보 출력
+void BFShowGraphVertex(ALGraph * pg, int startV)
+{
+	Queue queue;
+	int visitV = startV;
+	int nextV;
+
+	// DFS를 위한 큐의 초기화
+	QueueInit(&queue);
+
+	// 시작 정점 탐색
+	VisitVertex(pg, visitV);
+
+	while(LFirst(&(pg->adjList[visitV]), &nextV) == TRUE)
+	{
+		if(VisitVertex(pg, nextV) == TRUE)
+			Enqueue(&queue, nextV);
+
+		while(LNext(&(pg->adjList[visitV]), &nextV) == TRUE)
+		{
+			if(VisitVertex(pg, nextV) == TRUE)
+				Enqueue(&queue, nextV);
+		}
+
+		if(QIsEmpty(&queue) == TRUE)    // 큐가 비면 BFS 종료
+			break;
+		else
+			visitV = Dequeue(&queue);	
+	}
+
+	// 탐색 정보 초기화
+	memset(pg->visitInfo, 0, sizeof(int) * pg->numV);
+}
+```
+</details>
+<details>
+<summary>AVLGraphBFS.h</summary>
+
+```C
+#ifndef __AL_GRAPH_DFS_H__
+#define __AL_GRAPH_DFS_H__
+
+#include "DLinkedList.h"
+
+enum {A, B, C, D, E, F, G, H, I, J};
+
+typedef struct _ual {
+	int numV;
+	int numE;
+	List* adjList;
+	int* visitInfo;
+} ALGraph;
+
+// 그래프의 초기화
+void GraphInit(ALGraph* pg, int nv);
+
+// 그래프의 리소스 해제
+void GraphDestroy(ALGraph* pg);
+
+// 간선의 추가
+void AddEdge(ALGraph* pg, int fromV, int toV);
+
+// 간선의 정보 출력
+void ShowGraphEdgeInfo(ALGraph* pg);
+
+// BFS를 통해 그래프의 모든 정점 정보 출력
+void BFSShowGraphVertex(ALGraph* pg, int startV);
+
+#endif
+
+```
+</details>
+</details>
+
+## 최소 비용 신장 트리
+### 사이클의 이해
+
+단순 경로: 정점에서 정점으로 이르는 경로(바보같이 왔던 길을 다시 가지 않는 경우)
+- 단순 경로는 간선을 중복 포함하지 않는다.
+- 단순 경로라고 해서 최단거리 경로는 아니다.
+
+#### 사이클: 시작점과 끝점이 같은 단순 경로를 가리켜 '사이클'이라 한다.
+##
+신장 트리: 어떻게 경로를 구성하더라도 '사이클'을 형성하지 않는 그래프
+
+## 최소 비용 신장 트리의 이해와 적용
+- 그래프의 모든 정점이 간선에 의해서 하나로 연결되어 있다.
+- 그래프 내에서 사이클을 형성하지 않는다.
+### 최소 비용 신장 트리의 조건
+### 간선의 수 + 1 = 정점의 수
+
+## 크루스칼 알고리즘 1
+가중치를 기준으로 간선을 정렬한 후에 MST가 될 때까지 간선을 하나씩 선택 또는 삭제해 나가는 방식
+1. 간선을 모두 지우고 가중치가 낮은 간선부터 하나씩 추가
+2. 추가할 때마다 사이클이 형성되는지 확인하고 사이클이 형성되면 그 간선은 삭제
+3. 추가할 때마다 최소 비용 신장 트리가 형성되는지(최소 비용 신장 트리의 조건) 확인하고 형성이 된다면 종료.
+
+## 크루스칼 알고리즘 2
+높은 가중치의 간선을 하나씩 빼는 방식
+1. 높은 가중치의 간선부터 하나씩 삭제하는데, 독립되는 정점이 생기면 삭제하지 않는다.
+2. 삭제할 때마다 최소 비용 신장트리가 형성되는지 확인하고 형성이 된다면 종료.
+
+## 크루스칼 알고리즘의 구현
