--- a/자료구조(data structure)/14. 그래프(Graph).md
+++ b/자료구조(data structure)/14. 그래프(Graph).md
@@ -311,7 +311,8 @@ void DFSShowGraphVertex(ALGraph* pg, int startV);
 </details>
 
 ### 너비 우선 탐색의 구현 모델
-- 큐 - 책 보고 내용 추가.----
+- 큐 - 방문 차례의 기록을 목적으로 한다.
+- 배열 - 방문 정보의 기록을 목적으로 한다.
 
 <details>
 <summary>BFS 코드(출처: 윤성우의 열혈 자료구조)</summary>
@@ -488,29 +489,36 @@ void BFSShowGraphVertex(ALGraph* pg, int startV);
 ## 최소 비용 신장 트리
 ### 사이클의 이해
 
-단순 경로: 정점에서 정점으로 이르는 경로(바보같이 왔던 길을 다시 가지 않는 경우)
+단순 경로(simple path): 정점에서 정점으로 이르는 경로(바보같이 왔던 길을 다시 가지 않는 경우)
 - 단순 경로는 간선을 중복 포함하지 않는다.
 - 단순 경로라고 해서 최단거리 경로는 아니다.
 
-#### 사이클: 시작점과 끝점이 같은 단순 경로를 가리켜 '사이클'이라 한다.
+#### 사이클(Cycle): 시작점과 끝점이 같은 단순 경로를 가리켜 '사이클'이라 한다.
 ##
-신장 트리: 어떻게 경로를 구성하더라도 '사이클'을 형성하지 않는 그래프
+신장 트리(spanning tree): 어떻게 경로를 구성하더라도 '사이클'을 형성하지 않는 그래프
 
-## 최소 비용 신장 트리의 이해와 적용
+## 최소 비용 신장 트리(minimum cost spanning tree, MST)의 이해와 적용
 - 그래프의 모든 정점이 간선에 의해서 하나로 연결되어 있다.
 - 그래프 내에서 사이클을 형성하지 않는다.
 ### 최소 비용 신장 트리의 조건
 ### 간선의 수 + 1 = 정점의 수
 
-## 크루스칼 알고리즘 1
+## 프림(Prim) 알고리즘
+하나의 정점을 시작으로 MST가 될 때까지 트리를 확장해 나가는 방식
+
+## 크루스칼 알고리즘(Kruskal) 1
 가중치를 기준으로 간선을 정렬한 후에 MST가 될 때까지 간선을 하나씩 선택 또는 삭제해 나가는 방식
-1. 간선을 모두 지우고 가중치가 낮은 간선부터 하나씩 추가
-2. 추가할 때마다 사이클이 형성되는지 확인하고 사이클이 형성되면 그 간선은 삭제
-3. 추가할 때마다 최소 비용 신장 트리가 형성되는지(최소 비용 신장 트리의 조건) 확인하고 형성이 된다면 종료.
+1. 가중치를 기준으로 간선을 오름차순으로 정렬한다.
+2. 낮은 가중치의 간선부터 시작해서 하나씩 그래프에 추가한다.
+3. 사이클을 형성하는 간선은 추가하지 않는다.
+4. 간선의 수가 정점의 수보다 하나 적을 때 MST는 완성된다.
 
 ## 크루스칼 알고리즘 2
 높은 가중치의 간선을 하나씩 빼는 방식
-1. 높은 가중치의 간선부터 하나씩 삭제하는데, 독립되는 정점이 생기면 삭제하지 않는다.
-2. 삭제할 때마다 최소 비용 신장트리가 형성되는지 확인하고 형성이 된다면 종료.
+1. 가중치를 기준으로 간선을 내림차순으로 정렬한다.
+2. 높은 가중치의 간선부터 시작해서 하나씩 그래프에서 제거한다.
+3. 두 정점을 연결하는 다른 경로가 없는 경우 해당 간선은 제거하지 않는다.
+4. 간선의 수가 정점의 수보다 하나 적을 때 MST는 완성된다.
 
 ## 크루스칼 알고리즘의 구현
+크루스칼 알고리즘 2 구현.
