--- a/자료구조(data structure)/14. 그래프(Graph).md
+++ b/자료구조(data structure)/14. 그래프(Graph).md
@@ -522,3 +522,367 @@ void BFSShowGraphVertex(ALGraph* pg, int startV);
 
 ## 크루스칼 알고리즘의 구현
 크루스칼 알고리즘 2 구현.
+
+<details>
+<summary>크루스칼 알고리즘 코드(출처: 윤성우의 열혈 자료구조)</summary>
+
+- 연결 리스트, 배열 기반 스택, 우선순위 큐, 힙 코드는 앞선 챕터에서 구현한 코드 사용.
+- 크루스칼 알고리즘 코드는 그래프 코드를 변경, 추가한 것
+<details>
+
+<summary>ALEdge.h(간선 표현 구조체)</summary>
+
+```C
+#ifndef __AL_EDGE__
+#define __AL_EDGE__
+
+typedef struct _edge
+{
+	int v1;
+	int v2;
+	int weight;   // 가중치
+} Edge;
+
+#endif
+```
+</details>
+<details>
+<summary>ALGraphKruskal.h</summary>
+
+```C
+#ifndef __AL_GRAPH_KRUSKAL__
+#define __AL_GRAPH_KRUSKAL__
+
+#include "DLinkedList.h"
+#include "PriorityQueue.h"
+
+#include "ALEdge.h"
+
+// 정점의 이름들을 상수화
+enum {A, B, C, D, E, F, G, H, I, J};
+
+typedef struct _ual
+{
+	int numV;
+	int numE;
+	List * adjList;
+	int * visitInfo;
+	PQueue pqueue;    // 간선의 가중치 정보 저장
+} ALGraph;
+
+// 그래프의 초기화
+void GraphInit(ALGraph * pg, int nv);
+
+// 그래프의 리소스 해제
+void GraphDestroy(ALGraph * pg);
+
+// 간선의 추가
+void AddEdge(ALGraph * pg, int fromV, int toV, int weight);
+
+// 간선의 정보 출력
+void ShowGraphEdgeInfo(ALGraph * pg);
+
+// Depth First Search: 정점의 정보 출력
+void DFShowGraphVertex(ALGraph * pg, int startV);
+
+// 크루스칼 최소 비용 신장 트리의 구성
+void ConKruskalMST(ALGraph * pg);
+
+// 간선의 가중치 정보 출력
+void ShowGraphEdgeWeightInfo(ALGraph * pg);
+
+#endif
+```
+</details>
+<details>
+<summary>AVGraphkruskal.c</summary>
+
+```C
+#include <stdio.h>
+#include <stdlib.h>
+#include <string.h>
+#include "ALGraphKruskal.h"
+#include "DLinkedList.h"
+#include "ArrayBaseStack.h"
+
+int WhoIsPrecede(int data1, int data2);
+int PQWeightComp(Edge d1, Edge d2);
+
+void GraphInit(ALGraph * pg, int nv)
+{
+	int i;	
+
+	pg->adjList = (List*)malloc(sizeof(List)*nv);
+	pg->numV = nv;
+	pg->numE = 0;
+
+	for(i=0; i<nv; i++)
+	{
+		ListInit(&(pg->adjList[i]));
+		SetSortRule(&(pg->adjList[i]), WhoIsPrecede); 
+	}
+
+	pg->visitInfo= (int *)malloc(sizeof(int) * pg->numV);
+	memset(pg->visitInfo, 0, sizeof(int) * pg->numV);
+
+	// 우선순위 큐의 초기화
+	PQueueInit(&(pg->pqueue), PQWeightComp);
+}
+
+void GraphDestroy(ALGraph * pg)
+{
+	if(pg->adjList != NULL)
+		free(pg->adjList);
+
+	if(pg->visitInfo != NULL)
+		free(pg->visitInfo);
+}
+
+void AddEdge(ALGraph * pg, int fromV, int toV, int weight)
+{
+	Edge edge = {fromV, toV, weight};     // 간선의 정보 생성
+
+	LInsert(&(pg->adjList[fromV]), toV);
+	LInsert(&(pg->adjList[toV]), fromV);
+	pg->numE += 1;
+
+	// 간선의 정보를 우선순위 큐에 저장
+	PEnqueue(&(pg->pqueue), edge);
+}
+
+// ConKruskalMST Helper function
+void RecoverEdge(ALGraph * pg, int fromV, int toV, int weight)
+{
+	LInsert(&(pg->adjList[fromV]), toV);
+	LInsert(&(pg->adjList[toV]), fromV);
+	(pg->numE)++;
+}
+
+// 한쪽 방향의 간선 소멸: ConKruskalMST Helper function
+void RemoveWayEdge(ALGraph * pg, int fromV, int toV)
+{
+	int edge;
+
+	if(LFirst(&(pg->adjList[fromV]), &edge))
+	{
+		if(edge == toV)
+		{
+			LRemove(&(pg->adjList[fromV]));
+			return;
+		}
+
+		while(LNext(&(pg->adjList[fromV]), &edge))
+		{
+			if(edge == toV)
+			{
+				LRemove(&(pg->adjList[fromV]));
+				return;
+			}
+		}
+	}
+}
+
+// 간선의 소멸: ConKruskalMST Helper function
+void RemoveEdge(ALGraph * pg, int fromV, int toV)
+{
+	RemoveWayEdge(pg, fromV, toV);
+	RemoveWayEdge(pg, toV, fromV);
+	(pg->numE)--;
+}
+ 
+void ShowGraphEdgeInfo(ALGraph * pg)
+{
+	int i;
+	int vx;
+
+	for(i=0; i<pg->numV; i++)
+	{
+		printf("%c와 연결된 정점: ", i + 65);
+		
+		if(LFirst(&(pg->adjList[i]), &vx))
+		{
+			printf("%c ", vx + 65);
+			
+			while(LNext(&(pg->adjList[i]), &vx))
+				printf("%c ", vx + 65);
+		}
+		printf("\n");
+	}
+}
+
+void ShowGraphEdgeWeightInfo(ALGraph * pg)
+{
+	PQueue copyPQ = pg->pqueue;
+	Edge edge;
+
+	while(!PQIsEmpty(&copyPQ))
+	{
+		edge = PDequeue(&copyPQ);
+		printf("(%c-%c), w:%d \n", edge.v1+65, edge.v2+65, edge.weight);
+	}
+}
+
+int WhoIsPrecede(int data1, int data2)
+{
+	if(data1 < data2)
+		return 0;
+	else
+		return 1;
+}
+
+int PQWeightComp(Edge d1, Edge d2)
+{
+	return d1.weight - d2.weight;
+}
+
+int VisitVertex(ALGraph * pg, int visitV)
+{
+	if(pg->visitInfo[visitV] == 0)
+	{
+		pg->visitInfo[visitV] = 1;
+	//	printf("%c ", visitV + 65);
+		return TRUE;
+	}
+	
+	return FALSE;
+}
+
+
+void DFShowGraphVertex(ALGraph * pg, int startV)
+{
+	Stack stack;
+	int visitV = startV;
+	int nextV;
+
+	StackInit(&stack);
+	VisitVertex(pg, visitV);
+	SPush(&stack, visitV);
+
+	while(LFirst(&(pg->adjList[visitV]), &nextV) == TRUE)
+	{
+		int visitFlag = FALSE;
+
+		if(VisitVertex(pg, nextV) == TRUE)
+		{
+			SPush(&stack, visitV);
+			visitV = nextV;
+			visitFlag = TRUE;
+		}
+		else
+		{
+			while(LNext(&(pg->adjList[visitV]), &nextV) == TRUE)
+			{
+				if(VisitVertex(pg, nextV) == TRUE)
+				{
+					SPush(&stack, visitV);
+					visitV = nextV;
+					visitFlag = TRUE;
+					break;
+				}
+			}
+		}
+		
+		if(visitFlag == FALSE)
+		{
+			if(SIsEmpty(&stack) == TRUE)
+				break;
+			else
+				visitV = SPop(&stack);	
+		}
+	}
+
+	memset(pg->visitInfo, 0, sizeof(int) * pg->numV);
+}
+
+// 두 정점이 연결되어 있다면 TRUE, 그렇지 않다면 FALSE 반환
+int IsConnVertex(ALGraph * pg, int v1, int v2)
+{
+	Stack stack;
+	int visitV = v1;
+	int nextV;
+
+	StackInit(&stack);
+	VisitVertex(pg, visitV);
+	SPush(&stack, visitV);
+
+	while(LFirst(&(pg->adjList[visitV]), &nextV) == TRUE)
+	{
+		int visitFlag = FALSE;
+
+		if(nextV == v2)
+		{
+			memset(pg->visitInfo, 0, sizeof(int) * pg->numV);
+			return TRUE;
+		}
+
+		if(VisitVertex(pg, nextV) == TRUE)
+		{
+			SPush(&stack, visitV);
+			visitV = nextV;
+			visitFlag = TRUE;
+		}
+		else
+		{
+			while(LNext(&(pg->adjList[visitV]), &nextV) == TRUE)
+			{
+				
+				if(nextV == v2)
+				{
+					memset(pg->visitInfo, 0, sizeof(int) * pg->numV);
+					return TRUE;
+				}
+
+				if(VisitVertex(pg, nextV) == TRUE)
+				{
+					SPush(&stack, visitV);
+					visitV = nextV;
+					visitFlag = TRUE;
+					break;
+				}
+			}
+		}
+		
+		if(visitFlag == FALSE)
+		{
+			if(SIsEmpty(&stack) == TRUE)
+				break;
+			else
+				visitV = SPop(&stack);	
+		}
+	}
+
+	memset(pg->visitInfo, 0, sizeof(int) * pg->numV);
+	return FALSE;
+}
+
+
+// MST 간선의 수 + 1 == 정점의 수
+// 크루스칼 알고리즘 기반 최소 비용 신장 트리의 구성
+void ConKruskalMST(ALGraph * pg)
+{
+	Edge recvEdge[20];    // 복원할 간선의 정보 저장
+	Edge edge;
+	int eidx = 0;
+	int i;
+
+	// MST를 형성할 때까지 아래의 while문을 반복
+	while(pg->numE+1 > pg->numV)
+	{
+		edge = PDequeue(&(pg->pqueue));
+		RemoveEdge(pg, edge.v1, edge.v2);
+
+		if(!IsConnVertex(pg, edge.v1, edge.v2))
+		{
+			RecoverEdge(pg, edge.v1, edge.v2, edge.weight);
+			recvEdge[eidx++] = edge;
+		}
+	}
+
+	// 우선순위 큐에서 삭제된 간선의 정보를 회복
+	for(i=0; i<eidx; i++)
+		PEnqueue(&(pg->pqueue), recvEdge[i]);
+
+}
+```
+</details>
+</details>
