이진 탐색 추가

--- a/자료구조(data structure)/1. 자료구조와 알고리즘의 이해.md
+++ b/자료구조(data structure)/1. 자료구조와 알고리즘의 이해.md
@@ -55,3 +55,61 @@
 
 일반적으로 알고리즘을 평가할 때는 '메모리의 사용량'보다 '실행속도'에 초점을 둔다.
 - 중요도: 시간 복잡도 > 공간 복잡도
+
+### 이진 탐색(Binary Search) 알고리즘
+
+이진 탐색 알고리즘을 사용하기 위해선 배열에 저장된 데이터는 정렬이 돼있어야 한다.
+
+<details>
+<summary>이진 탐색 코드(출처: 윤성우의 열혈 자료구조)</summary>
+
+```C
+#include <stdio.h>
+
+int BSearch(int ar[], int len, int target)
+{
+	int first=0;   // 탐색 대상의 시작 인덱스 값
+	int last=len-1;   // 탐색 대상의 마지막 인덱스 값
+	int mid; 
+
+	while(first<=last)
+	{
+		mid=(first+last)/2;   // 탐색 대상의 중앙을 찾는다. 
+
+		if(target==ar[mid])   // 중앙에 저장된 것이 타겟이라면
+		{
+			return mid;
+		}
+		else    // 타겟이 아니라면 
+		{
+			if(target<ar[mid])   
+				last=mid-1;   // 뒷부분을 탐색 대상에서 제외
+			else
+				first=mid+1;   // 앞부분을 탐색 대상에서 제외
+		}
+	}
+	return -1;   // 찾지 못했을 때 반환되는 값 -1
+} 
+
+int main(void)
+{
+	int arr[]={1, 3, 5, 7, 9};
+	int idx;
+
+	idx=BSearch(arr, sizeof(arr)/sizeof(int), 7);
+	if(idx==-1)
+		printf("탐색 실패 \n");
+	else
+		printf("타겟 저장 인덱스: %d \n", idx);
+
+	idx=BSearch(arr, sizeof(arr)/sizeof(int), 4);
+	if(idx==-1)
+		printf("탐색 실패 \n");
+	else
+		printf("타겟 저장 인덱스: %d \n", idx);
+
+	return 0;
+}
+```
+</details>
+
